<resources>
    <string name="app_name">가자맵</string>

    <!-- BottomNavigation -->
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="setting">Setting</string>

    <!-- Add Group Bottom Sheet -->
    <string name="addgroup_inform">거래처 수를 터치하면 지도 페이지에 표시됩니다.</string>
    <string name="addgroup_btn">그룹 추가하기</string>
    <string name="addgroup_group">그룹 1</string>
    <string name="addgroup_start_parenthesis">(</string>
    <string name="addgroup_end_parenthesis">)</string>
    <string name="addgroup_groupperson">5</string>
    <string name="addgroup_total">전체</string>

    <!-- Group Dialog -->
    <string name="group_dialog_title1">그룹 수정하기</string>
    <string name="group_dialog_title2">그룹 추가하기</string>
    <string name="group_dialog_btn_submit">완료</string>
    <string name="group_dialog_hint">새 그룹의 이름을 입력해주세요</string>

    <!-- Location Search Dialog -->
    <string name="location_search_dialog_title">검색 결과</string>
    <string name="location_search_dialog_plus">추가</string>
    <string name="location_search_dialog_ex">경복궁</string>
    <string name="location_search_dialog_ex_address">서울 종로구 사직로 161</string>

    <!-- Map Button -->
    <string name="map_button_3km">3km</string>
    <string name="map_button_5km">5km</string>

    <!-- CardView -->
    <string name="cardview_distance">3.1</string>
    <string name="cardview_km">km</string>

    <string name="list_search">장소 찾기</string>
    <string name="list_search_tv">서울특별시 고객들</string>
    <string name="list_category1">최신순</string>
    <string name="list_category2">오래된순</string>
    <string name="list_category3">거리순</string>
    <string name="list_item_name">한고객</string>
    <string name="list_item_address">주소</string>
    <string name="list_item_address_detail">서울특별시 강남구</string>
    <string name="list_item_phone">연락처</string>
    <string name="list_item_phone_detail">010-0000-0000</string>
    <string name="list_item_distance">5.0km</string>
    <string name="list_dialog_tv1">가자맵이 사용자의 위치에 액세스하도록</string>
    <string name="list_dialog_tv2">허용하시겠습니까?</string>
    <string name="list_dialog_tv3">‘가자맵’이 장소 리스트에 대한 정보를 가져오기 위해</string>
    <string name="list_dialog_tv4">위치 정보를 사용하도록 허용합니다.</string>
    <string name="list_dialog_tv5">정확한 위치</string>
    <string name="list_dialog_tv6">대략적인 위치</string>
    <string name="list_dialog_tv7">앱 사용 중에만 허용</string>
    <string name="list_dialog_tv8">이번만 허용</string>
    <string name="list_dialog_tv9">허용 안함</string>
    <string name="add_hint">장소를 검색해주세요.</string>
    <string name="add_search_next">></string>
    <string name="add_bottom_tv1">지도에 직접 위치 추가하기</string>
    <string name="add_bottom_tv2">서울 강남구 봉은사로33길 33 양지직매상가</string>
    <string name="add_bottom_tv3">이 위치로 주소 설정</string>
    <string name="info_top">상세 보기</string>
    <string name="info_address1">서울 강남구 봉은사로33길 33 양지직매상가</string>
    <string name="info_address2">논현역, 학동역 근처</string>
    <string name="direct_top">추가하기</string>
    <string name="direct_hint1">새 장소의 이름을 입력해주세요.</string>
    <string name="direct_hint2">상세 주소 입력</string>
    <string name="direct_hint3">전화번호 입력</string>
    <string name="direct_warning">*필수 입력사항</string>
    <string name="direct_address_change">주소 변경</string>
    <string name="direct_check">확인</string>
    <string name="direct_warning_group">*해당 장소를 저장할 그룹 선택</string>
    <string name="direct_group_select">그룹 선택</string>
    <string name="setting_tool">설정</string>
    <string name="setting_email">test@gmail.com</string>
    <string name="setting_level">Free 등급</string>
    <string name="setting_1">/</string>
    <string name="setting_date">2023년 06월 25일</string>
    <string name="setting_subscribe">구독정보</string>
    <string name="setting_add_1">장소 등록</string>
    <string name="setting_add_2">엑셀 파일 업로드</string>
    <string name="setting_add_3">카카오 프로필 업로드</string>
    <string name="setting_add_4">연락처 업로드</string>
    <string name="setting_use_1">이용 안내</string>
    <string name="setting_use_2">앱 버전</string>
    <string name="setting_use_3">1.0.0v</string>
    <string name="setting_use_4">서비스 이용약관</string>
    <string name="setting_use_5">문의하기</string>
    <string name="setting_use_6">개인정보 처리방침</string>
    <string name="setting_use_7">오픈소스 라이선스</string>
    <string name="setting_etc_1">기타</string>
    <string name="setting_etc_2">회원탈퇴</string>
    <string name="setting_etc_3">로그아웃</string>
    <string name="setting_inquire_1">문의하기</string>
    <string name="setting_inquire_2">문의 내용</string>
    <string name="setting_inquire_3">제목</string>
    <string name="setting_inquire_4">내용</string>
    <string name="setting_inquire_5">전송하기</string>
    <string name="setting_excel_1">엑셀 파일 업로드</string>
    <string name="setting_excel_2">www.gajamap.com</string>
    <string name="setting_excel_3">이 링크로 들어가시면,</string>
    <string name="setting_excel_4">엑셀 파일 업로드를 통한 장소 등록이 가능합니다.</string>
    <string name="setting_excel_5">PC에 최적화되어 있으므로</string>
    <string name="setting_excel_6">PC로 통한 웹사이트 접속을 권장합니다.</string>
    <string name="setting_phone_1">연락처 선택</string>
    <string name="setting_phone_2">(</string>
    <string name="setting_phone_3">0</string>
    <string name="setting_phone_4">/</string>
    <string name="setting_phone_5">1000</string>
    <string name="setting_phone_6">)</string>
    <string name="setting_phone_7">검색</string>
    <string name="setting_phone_8">*해당 장소를 저장할 그룹 선택</string>
    <string name="setting_phone_9">전체선택</string>
    <string name="setting_phone_10">홍길동</string>
    <string name="setting_kakao_1">카카오 프로필 선택</string>
    <string name="setting_level_vip">VIP 등급</string>

    <string name="location_Info"><u>위치정보</u></string>
    <string name="service_Info"><u> 서비스 이용 약관</u></string>
    <string name="user_Info"><u>개인정보처리방침</u></string>

    <string name="location_Info_content">

    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_os">Os</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>