<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="fragment"
            type="com.pg.gajamap.ui.fragment.customerAdd.EditAddressMapFragment" />
        <variable
            name="viewModel"
            type="com.pg.gajamap.viewmodel.GetClientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.map.MapFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_search_location"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/fragment_list_tool"
            android:elevation="15dp"
            android:layout_marginTop="28dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/add_search_gps"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_magnifier"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <EditText
                android:id="@+id/et_location_search"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:background="@drawable/fragment_list_tool"
                android:hint="@string/add_hint"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:textColorHint="@color/et_hint_gray"
                android:imeOptions="actionGo"
                android:singleLine="true"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/add_search_gps"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_location_search_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_search_next"
                android:textSize="15sp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/add_search_next_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/kakaoMapContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.fragment.customerAdd.EditAddressMapFragment" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_location"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/ib_bottom_gps"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_roundbtn"
                android:src="@drawable/ic_gray_gps"
                android:elevation="15dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/fragment_add_bottom_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanumsquareneo_bold"
                    android:text="@string/add_bottom_tv1"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="13dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tv_location_address"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:fontFamily="@font/nanumsquareneo_regular"
                    android:text="@string/add_bottom_tv2"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/fragment_add_bottom_gray"
                    app:layout_constraintTop_toBottomOf="@+id/tv_location_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_location_btn"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:fontFamily="@font/nanumsquareneo_bold"
                    android:text="@string/add_bottom_tv3"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/fragment_add_bottom_purple"
                    app:layout_constraintTop_toBottomOf="@+id/tv_location_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_location_search"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:visibility="invisible"
            android:background="@drawable/fragment_add_bottom_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_location_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareneo_bold"
                android:text="@string/location_search_dialog_title"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/ll_location"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_location_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/line"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:paddingBottom="38dp"
                tools:listitem="@layout/item_location_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:elevation="10dp"
            android:indeterminateTint="@color/black"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/kakaoMapContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>