<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="fragment"
            type="com.pg.gajamap.ui.fragment.customerList.ListFragment" />
        <variable
            name="viewModel"
            type="com.pg.gajamap.viewmodel.GetClientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_search"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nanumsquareneo_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="편집"
                android:textColor="@color/main"
                android:textSize="16sp"
                android:fontFamily="@font/nanumsquareneo_bold"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_search_whole"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/fragment_list_tool"
            android:elevation="15dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_search"
                android:layout_width="138dp"
                android:layout_height="48dp"
                android:background="@drawable/fragment_list_search_purple"
                app:layout_constraintBottom_toBottomOf="@+id/cl_search_whole"
                app:layout_constraintStart_toStartOf="@+id/cl_search_whole"
                app:layout_constraintTop_toTopOf="@+id/cl_search_whole">

                <TextView
                    android:id="@+id/tv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanumsquareneo_bold"
                    android:text="@string/addgroup_total"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/cl_search"
                    app:layout_constraintEnd_toStartOf="@id/iv_search_drop"
                    app:layout_constraintStart_toStartOf="@+id/cl_search"
                    app:layout_constraintTop_toTopOf="@+id/cl_search" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_search_drop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:background="@drawable/ic_search_drop"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_search"
                    app:layout_constraintEnd_toEndOf="@+id/cl_search"
                    app:layout_constraintTop_toTopOf="@+id/tv_search" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:hint="이름을 검색해주세요."
                android:textColorHint="@color/et_hint_gray"
                android:background="@drawable/fragment_list_search_et_background"
                android:fontFamily="@font/nanumsquareneo_regular"
                android:paddingStart="12dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:singleLine="true"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="@+id/cl_search_whole"
                app:layout_constraintEnd_toEndOf="@+id/cl_search_whole"
                app:layout_constraintStart_toEndOf="@+id/cl_search"
                app:layout_constraintTop_toTopOf="@+id/cl_search_whole" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/fragment_list_category1"
            android:layout_width="71dp"
            android:layout_height="26dp"
            android:text="@string/list_category1"
            android:textSize="12sp"
            android:fontFamily="@font/nanumsquareneo_regular"
            android:textColor="@color/gray"
            android:background="@drawable/fragment_list_category_background"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="17dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_search_whole"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/fragment_list_category2"
            android:layout_width="71dp"
            android:layout_height="26dp"
            android:text="@string/list_category2"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/nanumsquareneo_regular"
            android:background="@drawable/fragment_list_category_background"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_search_whole"
            app:layout_constraintStart_toEndOf="@+id/fragment_list_category1"/>

        <TextView
            android:id="@+id/fragment_list_category3"
            android:layout_width="71dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/fragment_list_category_background"
            android:gravity="center"
            android:text="@string/list_category3"
            android:fontFamily="@font/nanumsquareneo_regular"
            android:layout_marginTop="10dp"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/fragment_list_category2"
            app:layout_constraintTop_toBottomOf="@+id/cl_search_whole"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:nestedScrollingEnabled="false"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:listitem="@layout/item_list"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_list_category1"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/nanumsquareneo_regular"
            android:text="새 장소를 추가해주세요"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_search_whole" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>